Fix T74572: adaptive sampling not scaling render passes correctly